--- a/progImpl.tex
+++ b/progImpl.tex
@@ -1,18 +1,22 @@
 %programming realization
 
-%TODO: здесь должно быть объяснение, почему мы включаем именно в Фумили.
-%Ну, или он должно появиться в предыдущей части, где мы рассказывали про Фумили
+\textcolor{red}{
+TODO: здесь должно быть объяснение, почему мы включаем именно в Фумили.
+Ну, или он должно появиться в предыдущей части, где мы рассказывали про Фумили.
+}
 
 %очень общая схема включения дополнения в Fumili и ROOT
 % \centering\includegraphics[width=0.4\textwidth]{pics/arch1.eps}
 
-\begin{figure}[h]
-\centering
-\centering\includegraphics[width=0.35\textwidth]{pics/arch1.eps}
-\caption{Схема отношений классов при фитировании. Разработанный авторами класс TFumiliWith constraints наследует от класса TFumili
-}
-\label{arch}
-\end{figure}
+% \begin{figure}[htbp]
+% \centering
+% \centering\includegraphics[width=0.35\textwidth]{pics/arch1.eps}
+% \caption{
+% Схема отношений классов при фитировании.
+% Разработанный авторами класс TFumiliConstraints наследует от класса TFumili.
+% }
+% \label{arch}
+% \end{figure}
 
 %фактический user API. Несколько избыточен для статьи и вообще недоработан
 % \begin{verbatim}
