--- a/title.tex
+++ b/title.tex
@@ -14,7 +14,7 @@
 %TODO: rewrite the abstract a bit different, if possible (the current version has been written for AYSS-18 abstracts and published already)
 
 \abstract{
-Some minimization problems, in addition to usual constant limits for single parameters, could imply constraints, i.e. additional relations between parameters $P_1, …, P_n$ in form of equations $\varphi(P_1, \dots, P_n) = 0$.
+Some minimization problems, in addition to usual constant limits for single parameters, could imply constraints, i.e. additional relations between parameters $p_1, \ldots, p_n$ in form of equations $\phi(p_1, \dots, p_n) = 0$.
 Often these equations are non-linear and complicated, and thus it is impossible or impractical to eliminate redundant parameters directly. A notable example of such problem is kinematic fitting.
 A minimization approach called a method of elimination of differentials is being developed at JINR as an extension to the FUMILI minimizer. It is being used to perform kinematic fitting while analyzing data collected at the ANKE spectrometer.
 The talk will cover the mathematical principles of the method, its software implementation and API, and present some examples of its usage.
