--- a/elDiff.tex
+++ b/elDiff.tex
@@ -1,46 +1,37 @@
-\textcolor{red}{TODO: привести к общему знаменателю обозначения в формуле с обозначениями в остальной статье!!!}
+% \textcolor{red}{TODO: привести к общему знаменателю обозначения в формуле с обозначениями в остальной статье!!!}
 
 % обозначим через $np$ число параметров, от которых зависит функционал \eqref{track_fit}, $nc$ - xbckj
-В близи фиксированной точки $P_0$ функционал \eqref{track_fit} может быть представлен степенным рядом
-% In the neighborhood of a point $x_0$ the functional $F(x)$ could be expressed as
+% Вблизи фиксированной точки $P_0$ функционал \eqref{track_fit} может быть представлен степенным рядом
+In a neighbourhood of a fixed point $\boldsymbol{p}^*$ the functional \eqref{track_fit} can be represented by a power series
 \begin{equation}\label{func_diff}
-% \begin{aligned}
-F(P_0+\Delta P) = F(P_0) + \sum_{i=1}^n \frac{\partial F(P_0)}{\partial P_i} \Delta P_i + \frac{1}{2}\sum_{i=1}^n\sum_{j=1}^n \Delta P_i \frac{\partial^2 F(P_0)}{\partial P_i \partial P_j} \Delta P_j
-% \end{aligned}
+F(\boldsymbol{p}^*+\Delta\boldsymbol{p}) = F(\boldsymbol{p}^*) + \sum_{i=1}^n \frac{\partial F(\boldsymbol{p}^*)}{\partial p_i} \Delta p_i + \frac{1}{2}\sum_{i=1}^n\sum_{j=1}^n \Delta p_i \frac{\partial^2 F(\boldsymbol{p}^*)}{\partial p_i \partial p_j} \Delta p_j
 \end{equation}
-Данную формулу можно переписать в матричном виде как:
-\begin{equation}
- \label{eq_diff1}
-F(P_0) + G(P_0) \Delta P + \frac{1}{2}\Delta P^T Z(P_0) \Delta P,
-\end{equation}
-где $G(P_0)$ это градиент, а $Z(P_0)$ - матрица Гессе.
-
-and the constraints $\phi(x)$ as
+and the constraints \eqref{eq:constr} by
 \begin{equation}\label{constr_diff}
-\phi(x_0+\Delta x) =
-\left[
-\begin{aligned}
-\phi_1(x_0) +& \sum_{i=1}^n \frac{\partial \phi_1(x_0)}{\partial x_i}\Delta x_i\\
-&\cdots\\
-\phi_m(x_0) +& \sum_{i=1}^n \frac{\partial \phi_m(x_0)}{\partial x_i}\Delta x_i\\
-\end{aligned}
-\right]
-= \phi(x_0) + D(x_0) \Delta x.
+\phi_k(\boldsymbol{p}^*+\Delta\boldsymbol{p}) = \phi_k(\boldsymbol{p}^*) + \sum_{i=1}^n \frac{\partial \phi_k(\boldsymbol{p}^*)}{\partial p_i}\Delta p_i = 0
+% = \phi(x_0) + D(x_0) \Delta x.
 \end{equation}
+Equations (\ref{func_diff}--\ref{constr_diff}) can be rewritten in the matrix form as:
+% Данную формулу можно переписать в матричном виде как:
+\begin{align}
+\label{eq_diff1}
+F(\boldsymbol{p}^*+\Delta\boldsymbol{p}) &= F(\boldsymbol{p}^*) + G(\boldsymbol{p}^*) \Delta\boldsymbol{p} + \frac{1}{2}\Delta\boldsymbol{p}^T Z(\boldsymbol{p}^*) \Delta\boldsymbol{p},\\
+\label{eq_diff2}
+\boldsymbol{\phi}(\boldsymbol{p}^*+\Delta\boldsymbol{p}) &= \boldsymbol{\phi}(\boldsymbol{p}^*) + D(\boldsymbol{p}^*) \Delta\boldsymbol{p} = 0,
+\end{align}
+where $G(\boldsymbol{p}^*)$ is the gradient, and $Z(\boldsymbol{p}^*)$ is the Hesse matrix.
+% где $G(P_0)$ это градиент, а $Z(P_0)$ - матрица Гессе.
+Here the rectangular matrix $D(\boldsymbol{p}^*)$ has $m$ rows and $n$ columns, since we have $n$ parameters and $m$ constraints.
 
-In the matrix equation $\phi(x) = \phi(x_0) + D(x_0) \Delta x$ the rectangular matrix $D$ has $m$ rows and $n$ columns (we have $n$ parameters and $m$ constraints).
-
-The vector $\Delta x$ could be split into $\Delta x_c$ that has $m$ components, and $\Delta x_f$ that has $n-m$ components; the same could be done with the matrix $D$. Then
+The vector $\Delta\boldsymbol{p}$ could be split into $\Delta\boldsymbol{p}_c$ that has $m$ components, and $\Delta\boldsymbol{p}_f$ that has $n-m$ components; the same could be done with the matrix $D$. Then \eqref{eq_diff2} could be rewritten as
 \begin{equation}\label{phi_split}
-\phi(x) = \phi(x_0) + D_c(x_0) \Delta x_c + D_f(x_0) \Delta x_f.
+\boldsymbol{\phi}(\boldsymbol{p}^*) + D_c(\boldsymbol{p}^*) \Delta\boldsymbol{p}_c + D_f(\boldsymbol{p}^*) \Delta\boldsymbol{p}_f = 0.
 \end{equation}
-Since \eqref{phi_split} is a linear equation, it could be solved in relation to $\Delta x_c$, resulting in
-\begin{equation}\label{X_c}
-\Delta x_c = \mathbf{v} + M \Delta x_f.
+Since \eqref{phi_split} is a linear equation, it could be solved in relation to $\Delta\boldsymbol{p}_c$, resulting in
+\begin{equation}\label{P_c}
+\Delta\boldsymbol{p}_c = \boldsymbol{v} + M \Delta\boldsymbol{p}_f.
 \end{equation}
-Returning to the initial functional \eqref{func_diff}
-\[F(x) = F(x_0) + G(x_0) \Delta x + \frac{1}{2}\Delta x^T Z(x_0) \Delta x,\]
-we could employ \eqref{X_c} to eliminate the sub-vector $\Delta x_c$, and obtain a similar functional, in contrast depending on only $n-m$ increments $\Delta x_f$:
+Returning to the initial functional \eqref{eq_diff1}, we could employ \eqref{P_c} to eliminate the sub-vector $\Delta\boldsymbol{p}_c$, and obtain a similar functional, in contrast depending on only $n-m$ increments $\Delta\boldsymbol{p}_f$:
 \begin{equation}\label{func_fin}
-F(x) = F'(x_0) + G'(x_0) \Delta x_f + \frac{1}{2}\Delta x_f^T Z'(x_0) \Delta x_f.
+F(\boldsymbol{p}^*+\Delta\boldsymbol{p}) = \tilde F(\boldsymbol{p}^*) + \tilde G(\boldsymbol{p}^*) \Delta\boldsymbol{p}_f + \frac{1}{2}\Delta\boldsymbol{p}_f^T \tilde Z(\boldsymbol{p}^*) \Delta\boldsymbol{p}_f.
 \end{equation}
