--- a/fumili.tex
+++ b/fumili.tex
@@ -7,20 +7,20 @@ The greedy minimization algorithm which is employed in FUMILI was first proposed
 FUMILI provides an optimal solution for $\chi^2$-like functionals \eqref{xisq_func} employing linearization:
 \begin{equation}
 \label{xisq_func}
-F(x) = \sum_{k=1}^K f_k^2(x) = \sum_{k=1}^K\left(\frac{Y_k - T_k(x)}{\sigma_k} \right)^2,
+F(\boldsymbol{p}) = \sum_{k=1}^K f_k^2(\boldsymbol{p}) = \sum_{k=1}^K\left(\frac{c_k - \hat{c}_k(\boldsymbol{p})}{\delta c_k} \right)^2,
 \end{equation}
-where $Y_k$ are measured values with errors $\sigma_k$, $k \in [1, K]$, and $T_k(x)$ are the values predicted by the model, depending on some parameters $x = \{x_1, \ldots, x_n\}$.
+where $c_k$ are measured values with errors $\delta c_k$, $k \in [1, K]$, and $\hat{c}_k(\boldsymbol{p})$ are the values predicted by the model, depending on some parameters $\boldsymbol{p} = \{p_1, \ldots, p_n\}$.
 
 % {Linearization method in minimizing $\chi^2$-like functionals}
-The second derivative $\displaystyle\frac{\partial^2 F}{\partial x_i x_j}$ could be found the following way:
+The second derivative $\displaystyle\frac{\partial^2 F}{\partial p_i p_j}$ could be found the following way:
 \begin{equation}
 \begin{aligned}
 %  \label{linear}
-\frac{\partial^2 F}{\partial x_i \partial x_j} &= \frac{\partial}{\partial x_i}\frac{\partial}{\partial x_j} \sum_{k=1}^K f_k^2(x) = \frac{\partial}{\partial x_i}\sum_{k=1}^K 2 f_k(x) \frac{\partial f_k(x)}{\partial x_j} = \\
-&= 2 \sum_{k=1}^K \left( \frac{\partial f_k(x)}{\partial x_i}\frac{\partial f_k(x)}{\partial x_j} + f_k(x) \frac{\partial^2 f_k(x)}{\partial x_i \partial x_j} \right)
+\frac{\partial^2 F}{\partial p_i \partial p_j} &= \frac{\partial}{\partial p_i}\frac{\partial}{\partial p_j} \sum_{k=1}^K f_k^2(\boldsymbol{p}) = \frac{\partial}{\partial p_i}\sum_{k=1}^K 2 f_k(\boldsymbol{p}) \frac{\partial f_k(\boldsymbol{p})}{\partial p_j} = \\
+&= 2 \sum_{k=1}^K \left( \frac{\partial f_k(\boldsymbol{p})}{\partial p_i}\frac{\partial f_k(\boldsymbol{p})}{\partial p_j} + f_k(\boldsymbol{p}) \frac{\partial^2 f_k(\boldsymbol{p})}{\partial p_i \partial p_j} \right)
 \end{aligned}
 \end{equation}
-\emph{Linearization} means discarding the second term $\displaystyle f_k\frac{\partial^2 f_k}{\partial x_i \partial x_j}$ employing second derivatives, that is considered small in comparison to the first one $\displaystyle\frac{\partial f_k}{\partial x_i}\frac{\partial f_k}{\partial x_j}$.
+\emph{Linearization} means discarding the second term $\displaystyle f_k(\boldsymbol{p})\frac{\partial^2 f_k(\boldsymbol{p})}{\partial p_i \partial p_j}$ employing second derivatives, that is considered small in comparison to the first one $\displaystyle\frac{\partial f_k(\boldsymbol{p})}{\partial p_i}\frac{\partial f_k(\boldsymbol{p})}{\partial p_j}$.
 
 Its main benefit is that the error matrix for a linearized functional is always positively defined, and thus each step leads to a minimum.
 
