--- a/concl.tex
+++ b/concl.tex
@@ -1,4 +1,8 @@
 % Outlook
 
-В ходе работы над кодом для проекта ANKE возникла идея обобщения данного кода и его публикации в открытом доступе для использования всем сообществом. Наши ближайшие планы включают в себя рефакторинг и доработку существующего кода, настройку CI/CD для проекта.
-В долгосрочной перспективе видится интересным создание универсального фреймворка для осуществелиния кинематического фита, где с использованием единого интерфейса можно было бы производить кинетический фит не только методом исключения дифференциалов, но и с использованием метода штрафных функций или метода множителей Лагранжа.
+% В ходе работы над кодом для проекта ANKE возникла идея обобщения данного кода и его публикации в открытом доступе для использования всем сообществом.
+% Наши ближайшие планы включают в себя рефакторинг и доработку существующего кода, настройку CI/CD для проекта.
+% В долгосрочной перспективе видится интересным создание универсального фреймворка для осуществелиния кинематического фита, где с использованием единого интерфейса можно было бы производить кинетический фит не только методом исключения дифференциалов, но и с использованием метода штрафных функций или метода множителей Лагранжа.
+During the work on the code for the ANKE project, the idea arose of generalizing this code and publishing it in open access for use by the entire community.
+Our immediate plans include refactoring and modifying the existing code, setting up continious integration and development for the project.
+In the long term, it seems interesting to create a universal framework that would use a single interface to perform kinematic fitting not only with the method of elimination of differentials, but also using the penalty function or the Lagrange multiplier method.
