Corrected typos, removed Russian

--- a/ANKEkinfit.tex
+++ b/ANKEkinfit.tex
@@ -17,7 +17,7 @@ In this case the detector acceptance allows to register only one of the final pr
 Tracking is being done in the forward detector by three multiwire gas chambers, each consisting of several multiwire planes.
 A set of signals produced by adjacent wires when a particle passes nearby is called a cluster.
 So, an event would contain a set of cluster coordinates $\{c_1, \ldots, c_K\}$ with their errors $\{\delta c_1, \ldots, \delta c_K\}$, and the minimized functional is defined by equation \eqref{track_fit}.
-For the study under consideration, the reconstructed coordinates $\hat{c}_k$ are calculated on the basis of the known field map of the analysing magnet using the Runge–Kutta method, assuming that these particles originated from a point-like source at the centre of the target-beam interaction volume.
+For the study under consideration, the reconstructed coordinates $\hat{c}_k$ are calculated on the basis of the known field map of the analyzing magnet using the Runge–Kutta method, assuming that these particles originated from a point-like source at the center of the target-beam interaction volume.
 
 % Рассмотрим область мишени, изображённую на рис.~\ref{anke_scheme}, где происходит упругое $pp$ взаимодействие и один из протонов регистрируется в координатных камерах Fd.
 % Результатом является набор измеренных значений координат кластеров ${C_i:m }$ c ошибками ${\delta C_i}$.
@@ -72,4 +72,3 @@ The reconstruction precision for momenta in polar coordinates in center of mass 
 Since $pp \to pp$ is a binary reaction, the condition \eqref{cons_miss} fixes the absolute value of the momentum $|\boldsymbol{p}_p^\mathrm{cm}|$ to the delta function.
 Kinematic fitting improves the precision of the polar angle $\theta_p^\mathrm{cm}$ nearly twice.
 For the azimuthal angle $\phi_p^\mathrm{cm}$ the improvement not so significant and can be noticed only at the edges of the acceptance.
-% For the analysis purposes 
