--- a/concl.tex
+++ b/concl.tex
@@ -4,5 +4,5 @@
 % Наши ближайшие планы включают в себя рефакторинг и доработку существующего кода, настройку CI/CD для проекта.
 % В долгосрочной перспективе видится интересным создание универсального фреймворка для осуществелиния кинематического фита, где с использованием единого интерфейса можно было бы производить кинетический фит не только методом исключения дифференциалов, но и с использованием метода штрафных функций или метода множителей Лагранжа.
 During the work on the code for the ANKE project, the idea arose of generalizing this code and publishing it in open access for use by the entire community.
-Our immediate plans include refactoring and modifying the existing code, setting up continious integration and development for the project.
+Our immediate plans include refactoring and modifying the existing code, setting up continuous integration and development for the project.
 In the long term, it seems interesting to create a universal framework that would use a single interface to perform kinematic fitting not only with the method of elimination of differentials, but also using the penalty function or the Lagrange multiplier method.
