--- a/main.tex
+++ b/main.tex
@@ -7,13 +7,11 @@
 \documentclass{webofc}
 \usepackage[varg]{txfonts}   % Web of Conferences font
 \usepackage{color}
-\usepackage{graphicx}
-\usepackage[russian,english]{babel}
 % \usepackage[usenames]{color}
 % \usepackage{colortbl}
 %
 \begin{document}
-  \input{title.tex}   %DONE
+\input{title.tex}   %DONE
 
 % ОБЩИЙ ПЛАН СТАТЬИ
 %
@@ -63,7 +61,7 @@
 \begin{thebibliography}{00}
 \bibitem{b1} J.P.~Berge, F.T.~Solmitz, H.D.~Taft, Rev.\ Sci.\ Instr.\ \textbf{32} 538 (1961).
 \bibitem{b2} R. Bock, Application of a generalized method of least squares for kinematical analysis of tracks in bubble chambers,       Geneva : CERN, 1960. - 11 p. CERN 60-30 (1960).
-\bibitem{b3} G.A. Korn, T.M. Korn, Mathematical handbook for scientists and engineers, McGraw-Hill (1968) 333--335; \foreignlanguage{russian}{Г. Корн, Т. Корн, Справочник по математике для научных работников и инженеров, Наука (1974) 334--336}
+\bibitem{b3} G.A. Korn, T.M. Korn, Mathematical handbook for scientists and engineers, McGraw-Hill (1968) 333--335.
 \bibitem{b4} P. Avery, KWFIT package\\ URL: \texttt{http://www.phys.ufl.edu/\textasciitilde{}avery/kwfit/}
 \bibitem{b5} V.I. Moroz, JINR communications R-1958 (1965)\\ URL: \texttt{http://nu73-73.jinr.ru/\textasciitilde{}cyrkov/MorozJINRCommR1958.pdf}
 % \texttt{https://drive.google.com/file/d/1z1hPsccoyXYGA-DT6-7xmeKnYBwPJCS8}
