--- a/progImpl.tex
+++ b/progImpl.tex
@@ -1,8 +1,8 @@
 %programming realization
 
 \textcolor{red}{
-TODO: здесь должно быть объяснение, почему мы включаем именно в Фумили.
-Ну, или он должно появиться в предыдущей части, где мы рассказывали про Фумили.
+TODO: There must be an explanation of why we include it specifically in Fumili.
+Well, or it should appear in the previous part, where we've spoken about Fumili.
 }
 
 %очень общая схема включения дополнения в Fumili и ROOT
