--- a/elDiff.tex
+++ b/elDiff.tex
@@ -2,7 +2,7 @@
 
 % обозначим через $np$ число параметров, от которых зависит функционал \eqref{track_fit}, $nc$ - xbckj
 % Вблизи фиксированной точки $P_0$ функционал \eqref{track_fit} может быть представлен степенным рядом
-In a neighbourhood of a fixed point $\boldsymbol{p}^*$ the functional \eqref{track_fit} can be represented by a power series
+In a neighborhood of a fixed point $\boldsymbol{p}^*$ the functional \eqref{track_fit} can be represented by a power series
 \begin{equation}\label{func_diff}
 F(\boldsymbol{p}^*+\Delta\boldsymbol{p}) = F(\boldsymbol{p}^*) + \sum_{i=1}^n \frac{\partial F(\boldsymbol{p}^*)}{\partial p_i} \Delta p_i + \frac{1}{2}\sum_{i=1}^n\sum_{j=1}^n \Delta p_i \frac{\partial^2 F(\boldsymbol{p}^*)}{\partial p_i \partial p_j} \Delta p_j
 \end{equation}
