Uncommented ANKE part

--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@
 \section{Example: Monte-Carlo simulation}
 \input{toyExpl.tex}
 \section{Kinematic fitting at ANKE}
-% \input{ANKEkinfit.tex}
+\input{ANKEkinfit.tex}
 \section{Conclusion and outlook}
 \input{concl.tex}
 
